kube/api-deploy.yml
# api-deploy.yml -- deployment for the main API process
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smallgat-api
  labels: &labels
    app: smallgat-api
spec:
  replicas: 2
  selector:
    matchLabels: *labels
  strategy:
    rollingUpdate:
      # todo: tweak these as this gets bigger
      maxUnavailable: 50%
      maxSurge: 1
  template:
    metadata:
      labels: *labels
    spec:
      containers:
      - name: smallgat
        image: gcr.io/headsdown/smallgat
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 0.1
            memory: 200M
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 1
          periodSeconds: 10
